--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;600&display=swap");
 @import "reset.css";
-@import "status-bar.css";
 @import "veriables.css";
-@import "login.css";
+
+/*구성요소들*/
+@import "components/status-bar.css";
+
+/*스크린*/
+@import "screens/login.css";
 
 body {
   font-family: "Noto Serif KR", serif;
