--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,4 +1,8 @@
 .status-bar {
+  position: fixed;
+  width: 100%;
+  box-sizing: border-box;
+  top: 0;
   display: flex;
   justify-content: center;
   padding: 8px 6px;
